# Airway-Skeleton-CGAL

./: CMakeLists.txt  Instalacion_cgal.txt  Main_skeleton_calc_dataset.py  Skeleton.py  airway_skeleton_env.yml  helpers.py  mesh_a_3d_gray_image.cpp  simple_mcfskel_example.cpp
Data/Airways/: ATM_001_0000_correspondance_sm_polylines.txt  ATM_001_0000_mesht.vtu  ATM_001_0000_out.off  ATM_001_0000_skel_poly.cgal  ATM_001_0000_skeleton_generations.vtk  ATM_002_0000_correspondance_sm_polylines.txt  ATM_002_0000_mesht.vtu  ATM_002_0000_out.off  ATM_002_0000_skel_poly.cgal  ATM_002_0000_skeleton_generations.vtk  ATM_003_0000_correspondance_sm_polylines.txt  ATM_003_0000_mesht.vtu  ATM_003_0000_out.off  ATM_003_0000_skel_poly.cgal  ATM_003_0000_skeleton_generations.vtk  ATM_004_0000_correspondance_sm_polylines.txt  ATM_004_0000_mesht.vtu  ATM_004_0000_out.off  ATM_004_0000_skel_poly.cgal  ATM_004_0000_skeleton_generations.vtk  ATM_005_0000_correspondance_sm_polylines.txt  ATM_005_0000_mesht.vtu  ATM_005_0000_out.off  ATM_005_0000_skel_poly.cgal  ATM_005_0000_skeleton_generations.vtk
